@@ -5,7 +5,6 @@
 product_name = Fedora Core
 product_path = Fedora
 iso_basename = FC
-bugurl = http://bugzilla.redhat.com
 comps = /etc/pungi/comps-fc7.xml
 manifest = /etc/pungi/minimal-manifest
 yumconf = /etc/pungi/yum.conf.x86_64
